<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5BF3CECE"
    android:backgroundTint="#F8DBDB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amarante"
        android:text="@string/tvTitulo"
        android:textColor="#0E0E0E"
        android:textSize="4mm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="#AC3E3E"
        android:onClick="factorizar"
        android:text="@string/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumberC" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <TextView
        android:id="@+id/tvResultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvResultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado"
        app:layout_constraintVertical_bias="0.423" />

    <ImageView
        android:id="@+id/ivFormula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:srcCompat="@drawable/ecuaciones" />

    <EditText
        android:id="@+id/etNumberA"
        android:layout_width="262dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#A30404"
        android:ems="10"
        android:hint="@string/etNumberA"
        android:inputType="textPersonName"
        android:shadowColor="#000000"
        android:textColor="#121212"
        android:textColorHighlight="#000000"
        android:textColorHint="#A19D9D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFormula" />

    <EditText
        android:id="@+id/etNumberB"
        android:layout_width="257dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#673AB7"
        android:ems="10"
        android:hint="@string/etNumberB"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumberA" />

    <EditText
        android:id="@+id/etNumberC"
        android:layout_width="257dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#3F51B5"
        android:ems="10"
        android:hint="@string/etNumberC"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumberB" />

    <TextView
        android:id="@+id/tvEnunciado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:shadowColor="#020202"
        android:text="@string/tvEnunciado"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFormula" />

    <TextView
        android:id="@+id/tvX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="232dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FAEDED"
        android:text="@string/tvX"
        android:textColor="#000000"
        android:textSize="4mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etNumberA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvX2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FBF3F3"
        android:text="@string/tvX2"
        android:textColor="#000000"
        android:textSize="5mm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toEndOf="@+id/etNumberB"
        app:layout_constraintTop_toBottomOf="@+id/tvX" />

</androidx.constraintlayout.widget.ConstraintLayout>